# tybre-md

./: .ralphrc  README.md  index.html  package-lock.json  package.json  product-plan-complete.md  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.ralph/: AGENT.md  fix_plan.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  terminal.rs  watcher.rs
src/components/: ProjectSearch.tsx  QuickOpen.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TerminalView.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx
src/editor/: MilkdownEditor.tsx  SyntaxRevealNodeView.ts  shikiPlugin.ts
src/hooks/: useSwitchProject.ts
src/lib/: shortcuts.ts
src/store/: appStore.ts  settingsStore.ts  workspaceStore.ts
src/styles/: components.css  globals.css
